...
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="Welcome To\nKuniyakino" />

        <EditText
            android:id="@+id/inputLoginEmail"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:ems="20"
            android:hint="Email"
            android:padding="10dp"
            android:background="@drawable/shape"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/inputLoginPassword"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:ems="20"
            android:hint="Password"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:inputType="textPassword" />



        <Button
            android:id="@+id/loginButton"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/black"
            android:onClick="onLogin"
            android:text="Login" />
...
