<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_home"
        android:title="Home" />

    <item
        android:id="@+id/ic_search"
        android:icon="@drawable/ic_search"
        android:title="Search" />

    <item
        android:id="@+id/ic_location"
        android:icon="@drawable/ic_location"
        android:title="Stores" />

    <item
        android:id="@+id/ic_account"
        android:icon="@drawable/ic_account"
        android:title="Account" />
</menu>
